[package]
name = "pac"
version = "0.1.0"
authors = ["Gokul Soumya"]
description = "Package manager for vim/neovim"
repository = "https://github.com/gokulsoumya/pac"
license = "MIT"
keywords = ["vim", "neovim", "package", "plugin", "manager"]
categories = ["command-line-utilities", "text-editors"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
yaml-rust = "0.3.5"
walkdir = "1"
termion = "1.0"
num_cpus = "1.0"
clap = "~2.27.0"
dirs = "1.0"
signal-hook = "0.1.12"
libc = "0.2.66"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
simple-logging = "2.0.2"
log = "0.4.8"

[dependencies.git2]
version = "0.13.18"
default-features = false
features = ["ssh", "https"]
